Task 05. Исправлено по результатам ревью.